third_party/move/move-prover/tests/sources/functional/bitwise_operators_enum.exp
Move prover returns: exiting with model building errors
error: unsupported language construct
   ┌─ tests/sources/functional/bitwise_operators_enum.move:39:5
   │
39 │     enum A has copy, drop {
   │     ^^^^ Move 2 language construct is not enabled: enum types

error: unsupported language construct
   ┌─ tests/sources/functional/bitwise_operators_enum.move:47:5
   │
47 │     enum B has drop {
   │     ^^^^ Move 2 language construct is not enabled: enum types
